--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "cookie-clicker-2",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://github.com/NalessoAxel/cookie_clicker_react",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "predeploy": "rm -rf dist && parcel build index.html --public--url /cookie_clicker_react",
+    "predeploy": "rm -rf dist && parcel build index.html",
     "deploy": "gh-pages -d dist",
     "dev": "parcel index.html"
   },
@@ -18,7 +19,6 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    
     "gh-pages": "^3.1.0"
   }
 }
